# lance-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
notes/: ARCHITECTURE.md  Lance_3B_Video__model.safetensors.keys.txt  Lance_3B__model.safetensors.keys.txt  Qwen2.5-VL-ViT__vit.safetensors.keys.txt
scripts/: categorize_keys.py  chat_image.py  chat_text.py  fetch_configs.py  inspect_safetensors_remote.py  lance_model_smoke.py  load_understand_test.py  run_official.sh  run_webui.sh  setup.sh  t2i.py  t2v.py
src/lance/: __init__.py  __main__.py  download.py  extract_understanding.py  flow_match.py  lance_model.py  qknorm_patch.py  verify.py
webui/: captioning.py  jobs.py  orchestrator.py  persistence.py  server.py  tokens.py
webui/static/: index.html
